src/test/deca/syntax/invalid/class_extends.deca
// Description :
// 
//      Test incorrect d'une classe nommée extends
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 19/06/2023 par gl03

class extends {
    
}